static/styles.css
:root {
    --grey: rgb(242,242,242);
    --green:  #4CAF50;
    --border: solid 1px rgb(220,220,220);
    --radius: 20px;
    --fonts: "Inter",-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
}

body {
    font-family: var(--fonts);
    margin: 0;
    color: #222;
    height: 100vh;
    background-image: linear-gradient(cornflowerblue, #FFB6C1);
    height: 100vh;
}

.column {
    display: flex;
    background-color: white;
    width: 1100px;
    position: relative;
    z-index: 1;
    margin: auto;
    height: 100vh;
}

h1 {
    text-align: center;
    font-weight: 300;
    font-size: 40px;
    margin-top: 0px;
}

.column > div:not(.img-container) {
    margin: 0 auto;
    overflow-y: scroll;
}

picture img {
    -webkit-filter: grayscale(100%);
    filter: grayscale(100%);
}

.profile img {
    height: 100vh;
}

form {
    background-color: white;
    width: 700px;
    margin: 20px auto;
}

form > span {
    display: block;
    margin: 10px 0;
    width: min-content;
    padding: 5px;
    width: 122px;
    padding: 10px;
}

form > span:hover {
    cursor: pointer;
    background-color: var(--grey);
    border-radius: var(--radius);
}

input[type="submit"] {
    margin: 20px auto;
    display: block;
    width: 220px;
}

input[type="submit"]:hover {
    cursor: pointer;
}

input[type="submit"]:disabled {
    opacity: 0.5;
    pointer-events: none;
}

.songs {
    display: flex;
    justify-content: space-between;
}

.card {
    padding: 20px;
    border: var(--border);
    border-radius: var(--radius);
}

.songs .card,
.details.card {
    display: flex;
    flex-direction: column;
}

.songs h2 {
    font-weight: bold;
    margin: 0 0 10px;
}

audio {
    outline: none;
    margin: 0 0 0 -5px;
    width: 280px;
}

label input[type="radio"] {
    opacity: 0;
    position: fixed;
    width: 0;
}

.songs label {
    margin: 20px auto 0;
    width: 220px;
    display: flex;
    justify-content: space-around;
}

.songs .card.selected {
    border: solid 1px #222;
}

.songs .card.selected label,
label.equal.selected {
    background-color: #222;
    color: white;
    border: solid 1px #222;
}

.songs .card:not(.selected) label img,
label.equal:not(.selected) img {
    opacity: 0;
}

.songs .card > span {
    font-style: italic;
    font-size: small;
    font-weight: 100;
    opacity: 0;
    margin: -7px 0 7px;
}

.songs .card.playing > span {
    opacity: 1;
}

label.equal {
    display: flex;
    justify-content: space-around;
    width: 290px;
    margin: 20px auto 0;
}

.button {
    cursor: pointer;
    border: var(--border);
    border-radius: 35px;
    font-weight: 300;
    padding: 10px;
    background-color: var(--green);
    font-size: 25px;
    color: white;
    outline: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-tap-highlight-color: transparent;
}

.button:hover {
    border: solid 1px #222;
}

.details {
    margin: 20px 0 0;
}

.details h2 {
    margin: 0 0 15px;
}

.details > span {
    font-style: italic;
    font-size: small;
    transform: translateY(-12px);
}

.details label {
    cursor: pointer;
    margin: 0 0 5px;
}

.question {
    display: flex;
    flex-direction: column;
}

.question:not(:last-child) {
    margin: 0 0 20px;
}

.question span {
    font-weight: 300;
    font-size: large;
    margin: 0 0 5px;
}

.details textarea {
    font-family: var(--fonts);
}

.details textarea,
.details input[type="email"] {
    border-radius: var(--radius);
    outline: none;
    padding: 10px;
    border: solid 1px #222;
    resize: none;
}

.column .mobile {
    display: none;
}

input[type="submit"] {
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none;
}

#thank-you {
    display: none;
}

#thank-you:target {
    display: block;
}

#thank-you a:visited {
    color: white;
}

#thank-you > div:first-child {
    position: fixed;
    top: 0;
    width: 100vw;
    height: 100vh;
    background-color: black;
    opacity: 0.9;
    z-index: 100;
    cursor: pointer;
}

#thank-you > div:last-child {
    position: absolute;
    width: 80%;
    max-width: 500px;
    border: solid 2px var(--grey);
    border-radius: var(--radius);
    background-color: transparent;
    z-index: 200;
    left: 50%;
    top: 40%;
    transform: translate(-50%, -40%);
    padding: 20px 40px;
    color: var(--grey);
}

#thank-you > div:last-child > a {
    position: absolute;
    right: 20px;
    text-decoration: none;
}

#thank-you > div:last-child h1 {
    text-align: center;
}

#thank-you > div:last-child p {
    margin: auto;
    font-weight: 300;
    font-size: 21px;
    letter-spacing: 1px;
}

@media only screen and (min-height: 800px) {
    .column {
        position: absolute;
        border-radius: 20px;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }

    .profile img {
        border-bottom-left-radius: 25px;
        border-top-left-radius: 25px;
    }
}

@media only screen and (max-width: 1100px) {
    body {
        background-image: unset;
    }
    .column {
        width: 100%;
        display: flex;
    }
    .profile img {
        max-width: 29vw;
    }
    .column > div:not(.img-container) {
        max-width: 71vw;
    }
    form {
        max-width: 97%;
    }
    audio {
        max-width: 100%;
    }
    .button {
        max-width: 97%;
    }
    .songs .card:first-child {
        margin-right: 10px;
    }
    .songs .card {
        max-width: 42%;
    }
}

@media only screen and (max-width: 800px) {
    body {
        height: unset;
    }
    form {
        margin-top: 0;
        max-width: 100%;
        padding-bottom: 20px;
    }
    .column {
        display: block;
    }
    .column .profile {
        display: none;
    }
    form .songs {
        display: flex;
        flex-direction: column;
    }
    .column h1 {
        font-size: 30px;
    }
    .songs .card:first-child {
        margin-bottom: 20px;
        margin-right: unset;
    }
    form > span {
        background-color: var(--grey);
        border-radius: var(--radius);
        margin-left: 15px;
    }
    .button {
        font-size: 21px;
    }
    .songs .card {
        max-width: unset;
    }
    .songs .card h2 {
        font-size: 20px;
    }
    .column > div:not(.img-container) {
        max-width: unset;
    }
}

@media only screen and (max-width: 440px) {
    form > .card {
        border-radius: unset;
        border-left: none;
        border-right: none;
    }
    .column .mobile img {
        width: 100%;
        transform: scale(2);
        margin-top: 14px;
    }
    .img-container {
        overflow: hidden;
        border-bottom: solid 2px #222;
        height: 115px;
    }
    .column .mobile {
        display: unset;
    }
}

